--- a/home.html
+++ b/home.html
@@ -26,6 +26,7 @@
     <main>
         <section>
             <h2 class="heading">Course</h2>
+<!--            Video upload   -->
             <video src=" image/Lecture 06 IP addressing and routing Part I_v240P.mp4     "width="33%" controls autoplay muted></video> 
             
                 <video src="image/Project 5.mp4     "width="33%" controls autoplay muted ></video>
@@ -38,6 +39,7 @@
          </section>
          <section>
             <h2 class="heading">Study material</h2>
+<!--              image upload -->
             <!-- <object data="image/Ethical hacking notes.pdf" type="application/pdf" width="20%" height="40%" ></object> -->
             <a target="_blank" href="image/Ethical hacking notes.pdf" > <img src="image/Screenshot 2023-04-22 225411.png" alt="" width="30%" height="30%" ></a>
             <a target="_blank" href="image/Ethical hacking notes.pdf" > <img src="image/Screenshot 2023-04-22 225411.png" alt="" width="30%" height="30%" ></a>
@@ -50,6 +52,7 @@
             <h2 class="heading">
                 Our founder
             </h2>
+<!--         image upload         -->
             <img src="image/user.png" alt="sk" width="30%" height="30%">
             <h3 class="heading">Shubham Kahar</h3>
             <h3> I am learning web development cousre form Apna college and Anuj bhaiya and PW skills premium cousre which i get in telegram free and this is my project. </h3>
